# Clipclip-desktop

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: clipboard.rs  main.rs  server.rs  storage.rs  tray.rs
