[package]
name = "clipclip-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
eframe = { version = "0.34.1", features = ["glow"] }
env_logger = "0.11.10"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tray-icon = "0.22.0"
image = { version = "0.25.10", default-features = false, features = [
    "jpeg",
    "png",
] }
winit = "0.30.13"
clipboard-master = "4.0.0"
tiny_http = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
